PIE-28: Fixed alignment of icon and title in 4-icon section

--- a/assets/css/startertheme.css
+++ b/assets/css/startertheme.css
@@ -33,11 +33,21 @@
   background-size:cover;
   height: 100px;
   width: 100px;
+
 }
 
 .four-icon-section-wave {
   height: 110px;
   overflow: hidden;
+}
+
+.image-title-cointainer {
+  padding-left: 22%;
+}
+
+.inline-vertical-middle {
+  display: inline-block;
+  vertical-align: middle;
 }
 
 /* */
